# astrbot_sast_plugin

./: ARCHITECTURE.md  README.md  _conf_schema.json  config_example.json  main.py  metadata.yaml  pyproject.toml
core/: __init__.py  bilibili_api.py  monitor.py  scheduler.py  state.py  zhihu_rss.py  zhihu_state.py
models/: __init__.py  bilibili.py  report.py  zhihu.py
services/: __init__.py  ai_summarizer.py  archive_service.py  content_search.py  daily_report.py  export_service.py  formatter.py  report_aggregator.py  zhihu_formatter.py
utils/: __init__.py  chart_generator.py  command_utils.py  link_extractor.py  openrouter_client.py  tavily_client.py
