[project]
name = "astrbot-sast-plugin"
version = "2.1.0"
description = "Comprehensive Bilibili and Zhihu monitoring plugin for AstrBot with AI-powered daily reports and visualizations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.1",
    "apscheduler>=3.10.0",
    "astrbot>=4.5.0",
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "playwright>=1.55.0",
]
